Fix overflow and scrolling issues in Modals

--- a/components/Main.scss
+++ b/components/Main.scss
@@ -29,19 +29,6 @@
         margin-right: 7px;
     }
 
-    .modal {
-        position: absolute;
-        overflow-y: auto;
-        margin-left: auto;
-        margin-right: auto;
-        &.no-close .close {
-            display: none;
-        }
-    }
-
-    .modal-title {
-        font-size: 11pt;
-    }
 
     @include only-on(phablets-and-smaller) {
 
